# win-app-delete-controller

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
setup/: run.cmd  setup.cmd  setup.ps1
src/: fonts.rs  installed_app.rs  main.rs  scanner.rs  settings.rs  ui.rs  uninstaller.rs
